--- a/raport.ipynb
+++ b/raport.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "## Decyzje projektowe\n",
-    "- Funkcja aktywacyjna jest parametryzowana, więc bez problemu można testować różne. My korzystaliśmy z sigmoid'a\n",
+    "- Funkcja aktywacyjna jest parametryzowana, więc bez problemu można testować różne. My korzystaliśmy z sigmoid'a z przycinaniem inputu, w celu uniknięcia overflow.\n",
     "- Zdecydowaliśmy się połączyć warstwy ukryte z następującymi po nich warstwami aktywacyjnymi w jedną klasę\n",
     "- Dla klasyfikacji binarnej, perceptron tworzy ostatnią warstwę z 1 neuronem, a dla klasyfikacji wieloklasowej - ostatnia warstwa ma tyle neuronów ile klas rozpoznaje\n",
     "- W funkcji `fit()` perceptronu dzielimy podany dataset na część trenującą i walidacyjną w zależności od podanego parametru `val_ratio`. Co `val_freq` epok, sprawdzana jest skuteczność funkcji `predict()` na zbiorze walidacyjnym. Jeśli pogorszyła się ona względem poprzedniego sprawdzenia, to trenowanie jest zatrzymywane w celu ograniczenia overfittingu."
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do klasyfikacji danych ze zbioru MNIST najlepiej sprawdził się learning rate 0.1 ze średnią skutecznością 91%. Również, podobnie dobrze działały learning rates z zakresu 0.005-0.05, uzyskując skuteczność ponad 80%.\n",
+    "Do klasyfikacji danych ze zbioru MNIST najlepiej sprawdził się learning rate 0.1 ze średnią skutecznością ok. 90%. Również, podobnie dobrze działały learning rates z zakresu 0.005-0.05, uzyskując skuteczność ponad 80%.\n",
     "\n",
     "Warto zaznaczyć, że skuteczności dla tych learning rates mogłyby wyglądać inaczej w przypadku innej architektury sieci neuronowej."
    ]
